# Sip-MCU

./: README.md  cleanup.bat  libsipua3.sln
RtmpClient/: ReadMe.txt  Resource.h  RtmpClient.aps  RtmpClient.cpp  RtmpClient.h  RtmpClient.rc  RtmpClient.vcproj  RtmpClientDlg.cpp  RtmpClientDlg.h  Web Client.rar  settings.db  stdafx.cpp  stdafx.h
RtmpClient/res/: RtmpClient.rc2
ScreenRecorder/: ReadMe.txt  ScreenRecorder.aps  ScreenRecorder.cpp  ScreenRecorder.h  ScreenRecorder.rc  ScreenRecorder.vcproj  ScreenRecorderDlg.cpp  ScreenRecorderDlg.h  resource.h  stdafx.cpp
ScreenRecorder/res/: ScreenRecorder.rc2
VideoConfClient/: ReadMe.txt  VideoConfClient.aps  VideoConfClient.cpp  VideoConfClient.h  VideoConfClient.rc  VideoConfClient.vcproj  VideoConfClientDlg.cpp  VideoConfClientDlg.h  resource.h  stdafx.cpp
VideoConfClient/res/: VideoConfClient.rc2
VideoConfDemo/: VideoConfDemo.aps  VideoConfDemo.rc  VideoConfDemo.vcproj  VideoConference.aps  VideoConference.cpp  VideoConferenceDlg.cpp  VideoConferenceDlg.h  mdump.cpp  resource.h
VideoConference/: ReadMe.txt  VideoConference.aps  VideoConference.h  VideoConference.rc  VideoConference.vcproj  VideoConferenceDlg.cpp  VideoConferenceDlg.h  mdump.h  resource.h  stdafx.cpp
VideoConference/res/: VideoConference.rc2
VideoPlayerDemo/: ReadMe.txt  VideoPlayerDemo.aps  VideoPlayerDemo.cpp  VideoPlayerDemo.h  VideoPlayerDemo.rc  VideoPlayerDemo.vcproj  VideoPlayerDemoDlg.cpp  VideoPlayerDemoDlg.h  resource.h  stdafx.cpp
VideoPlayerDemo/res/: VideoPlayerDemo.rc2
codecs/: echo_save_restore.patch
codecs/broadvoice/: Makefile.in  config-h.in  configure  configure-iphone
codecs/broadvoice/doc/: Makefile.in
codecs/broadvoice/src/: Makefile.in  broadvoice.dsp  broadvoice.vcproj  libbroadvoice.2005.vcproj  libbroadvoice.2008.vcproj  libbroadvoice.dsp
codecs/ffmpeg-i386/: inttypes.h
codecs/ffmpeg-i386/ogg/: ogg.h  os_types.h
codecs/ffmpeg-i386/theora/: theora.h
codecs/g722/: libg722.vcproj
codecs/g722/include/: g722.h
codecs/g726/: libg726.vcproj
codecs/gsm/: Makefile  Makefile.in  configure
codecs/gsm/add-test/: add_test.c
codecs/gsm/inc/: config.h  gsm.h  gsm.h.orig  private.h  proto.h  toast.h  unproto.h
codecs/gsm/src/: add.c  code.c  debug.c  decode.c  gsm_create.c  gsm_decode.c  gsm_destroy.c  gsm_encode.c  gsm_explode.c  gsm_implode.c  gsm_option.c  gsm_print.c  long_term.c  lpc.c  preprocess.c  rpe.c  short_term.c  table.c  toast.c  toast_alaw.c  toast_audio.c  toast_lin.c  toast_ulaw.c
codecs/gsm/tls/: bitter.c  sweet.c  taste.c
codecs/gsm/tst/: cod2lin.c  cod2txt.c  gsm2cod.c  lin2cod.c  lin2txt.c
codecs/ilbc-rfc3951/: AUTHORS  COPYING  Makefile.am  Makefile.in  autogen.sh  configure  configure-iphone  configure.ac
codecs/ilbc-rfc3951/doc/: Makefile.am  Makefile.in
codecs/ilbc-rfc3951/ilbc/: LPCencode.c  Makefile.am  Makefile.in  helpfun.c  helpfun.h  iLBC_decode.c
codecs/ilbc-rfc3951/platform/: Makefile.am  Makefile.in
codecs/ilbc-rfc3951/platform/vsnet-ilbc/: Makefile.am  Makefile.in  ReadMe.txt  libilbc.sln  libilbc.vcproj
codecs/libg722_1/src/: libg722_1.dsp  libg722_1.vcproj
codecs/libg729a/: codec_g729.c  codec_g729.h  libg729a.sln  libg729a.vcproj
codecs/libg729a/include/: cst_ld8a.h  dtx.h  g729ab.h  ld8a.h  sid.h  tab_dtx.h  tab_ld8a.h  typedef.h  vad.h
codecs/libg729a/src/: Makefile  acelp_ca.c  bits.c  calcexc.c  cod_ld8a.c  coder.mak  cor_func.c  de_acelp.c  dec_gain.c  dec_lag3.c  dec_ld8a.c  dec_sid.c  decoder.mak  dtx.c  filter.c  g729ab.c  gainpred.c  lpca.c  lpcfinl.c  lpcfunca.c  lspdec.c  lspgetq.c  p_parity.c  pitch_a.c  post_pro.c  postfila.c  pre_proc.c  pred_lt3.c  qsidgain.c  qsidlsf.c  qua_gain.c  qua_lsp.c  tab_dtx.c  tab_ld8a.c  taming.c  util.c  utilinl.c  vad.c
codecs/libjpeg/: jpeglib.h  libjpeg.vcproj
codecs/libogg/: configure-iphone
codecs/libogg/win32/: ogg_static.vcproj
codecs/libtheora/: CHANGES  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  libtheora.spec
codecs/libtheora/doc/: Makefile.am  Makefile.in  draft-barbato-avt-rtp-theora-01.txt  draft-barbato-avt-rtp-theora-01.xml
codecs/libtheora/examples/: Makefile.in  dump_video.c
codecs/libtheora/include/: Makefile.in
codecs/libtheora/lib/: Makefile.am  Makefile.in  cpu.c  encoder_disabled.c
eXosip/: configure  configure-iphone
eXosip/src/: eXcall_api.c  eXconf.c  eXosip2.h  eXtl_dtls.c  eXtl_udp.c  eXutils.c  jcallback.c  udp.c
libconfig/: libconfig.cpp  libconfig.def  libconfig.vcproj  np_config.c  np_config.h  np_list.c  np_list.h
libdrawtext/: ReadMe.txt  getopt.c  getopt.h  libdrawtext.def  libdrawtext.h  libdrawtext.vcproj
librtmp/: handshake.h  librtmp.vcproj  log.c  pub_auth.patch  rtmp.c  rtmp.h  rtmp_sys.h
libsqlite3/: codec.h  keywordhash.h  libsqlite3.vcproj  opcodes.h  parse.c  parse.h  sqlite3.def  vdbe.c
linphone/: linphone.iss.in
linphone/coreapi/: callbacks.c  ec-calibrator.c  friend.c  linphonecall.c  linphonecore.c  linphonecore.h  lpconfig.c  lsd.c  misc.c  offeranswer.c  private.h  proxy.c  sal.c  sal_core.h  sal_eXosip2.c  sal_eXosip2.h  sal_eXosip2_sdp.c  siplogin.c
linphone/media_api/: basiccall.h  callmember.h  media_api.c  mediaflow.h
linphone/oRTP/: ortp.patch
linphone/scripts/: builder-mingw.mk
osip/: Makefile.in  configure  configure-iphone
osip/scripts/: Makefile.in
plugins/jpegoutput/: jpeg_utils.c  jpeg_utils.h
plugins/msbv16/: libmsbv16.vcproj
plugins/msbv32/: libmsbv32.vcproj
plugins/msg722/: .hg_archival.txt  .hgtags  AUTHORS  ChangeLog  NEWS  README  autogen.sh  configure.ac  msg722.c
plugins/msg722/src/: Makefile.am  g722_decode.c  g722_encode.c  prepare_linphone_for_g722.sh  stdint.h
plugins/msilbc/: INSTALL  Makefile.am  Makefile.in  aclocal.m4  configure.ac  ilbc.c
plugins/msvideomixer/: AUTHORS  COPYING  README  autogen.sh  configure.ac  libmsvideostitcher.vcproj  msvideostitcher.vcproj
plugins/msvideomixer/src/: Makefile.am  mixer_layouts.c  video_mixer.c  video_mixer.h
plugins/msvideomixer/tests/: Makefile.am  v4l_mosaic.c
plugins/msx264/: configure.ac
(+125 files in other folders)
