lib_LTLIBRARIES=libilbc.la

libilbc_la_SOURCES= \
anaFilter.c  enhancer.c       getCBvec.c  iCBConstruct.c  iLBC_encode.h  packing.c \
anaFilter.h  enhancer.h       getCBvec.h  iCBConstruct.h  iLBC_test.c    packing.h \
constants.c  filter.c         helpfun.c   iCBSearch.c     LPCdecode.c    StateConstructW.c \
constants.h  filter.h         helpfun.h   iCBSearch.h     LPCdecode.h    StateConstructW.h \
createCB.c   FrameClassify.c  hpInput.c   iLBC_decode.c   LPCencode.c    StateSearchW.c \
createCB.h   FrameClassify.h  hpInput.h   iLBC_decode.h   LPCencode.h    StateSearchW.h \
doCPLC.c     gainquant.c      hpOutput.c  iLBC_define.h   lsf.c          syntFilter.c \
doCPLC.h     gainquant.h      hpOutput.h  iLBC_encode.c   lsf.h          syntFilter.h 

ilbc_includedir=$(includedir)/ilbc
ilbc_include_HEADERS=iLBC_decode.h iLBC_encode.h iLBC_define.h


